--- a/theCapitol.Web/Views/Account/Register.cshtml
+++ b/theCapitol.Web/Views/Account/Register.cshtml
@@ -14,9 +14,9 @@
         <h4>create your account for the <span>Capitol</span></h4>
         <hr />
         <div class="form-group">
-            <div class="text-center">
+            @*<div class="text-center">
                 @Html.ValidationSummary()
-            </div>
+            </div>*@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label register-label" })
