--- a/theCapitol.Web/Views/Home/Services.cshtml
+++ b/theCapitol.Web/Views/Home/Services.cshtml
@@ -40,7 +40,7 @@
                     <i class="fa fa-users"></i>
                     <h3>The Experience</h3>
                     <p>
-                        <span>Everyone</span> is welcome to join us for our main service
+                        Bring your <span>family</span> and join us for our main service
                         <span>Sundays at 10:30am</span>.
                         Child care is provided at <span>no cost</span> to your family.
                     </p>
