--- a/theCapitol.Web/Views/Home/Contact.cshtml
+++ b/theCapitol.Web/Views/Home/Contact.cshtml
@@ -36,85 +36,106 @@
             </div>
         </div> <!--/row-->
     </div><!--/container-->
+
+    <div id="contact-form">
+        <!-- contact form -->
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-horizontal">
+                <h4>send us your questions about the <span>Capitol</span></h4>
+                <hr />
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2 contact-form-label" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Name, new
+                   {
+                       htmlAttributes = new
+                       {
+                           @class = "form-control",
+                           @placeholder = "who are you?"
+                       }
+                   })
+                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2 contact-form-label" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Email, new
+                   {
+                       htmlAttributes = new
+                       {
+                           @class = "form-control",
+                           @placeholder = "how can we contact you?"
+                       }
+                   })
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Subject, htmlAttributes: new { @class = "control-label col-md-2 contact-form-label" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Subject, new
+                   {
+                       htmlAttributes = new
+                       {
+                           @class = "form-control",
+                           @placeholder = "what's this about?"
+                       }
+                   })
+                        @Html.ValidationMessageFor(model => model.Subject, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Message, htmlAttributes: new { @class = "control-label col-md-2 contact-form-label" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Message, new
+                   {
+                       htmlAttributes = new
+                       {
+                           @class = "form-control",
+                           @placeholder = "tell us more..."
+                       }
+                   })
+                        @Html.ValidationMessageFor(model => model.Message, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="send email" class="btn btn-default" />
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+    <div id="google-maps">
+        <h4>need a <span>map</span>?</h4>
+        <div id="map"></div>
+    </div>
 </div><!--/#contact-->
+<div class="clearfix"></div>
 
-<div id="contact-form">
-    <!-- contact form -->
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-horizontal">
-            <h4>send us your questions about the <span>Capitol</span></h4>
-            <hr />
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2 contact-form-label" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new
-               {
-                   htmlAttributes = new
-                   {
-                       @class = "form-control",
-                       @placeholder = "who are you?"
-                   }
-               })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2 contact-form-label" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Email, new
-               {
-                   htmlAttributes = new
-                   {
-                       @class = "form-control",
-                       @placeholder = "how can we contact you?"
-                   }
-               })
-                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Subject, htmlAttributes: new { @class = "control-label col-md-2 contact-form-label" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Subject, new
-               {
-                   htmlAttributes = new
-                   {
-                       @class = "form-control",
-                       @placeholder = "what's this about?"
-                   }
-               })
-                    @Html.ValidationMessageFor(model => model.Subject, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Message, htmlAttributes: new { @class = "control-label col-md-2 contact-form-label" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Message, new
-               {
-                   htmlAttributes = new
-                   {
-                       @class = "form-control",
-                       @placeholder = "tell us more..."
-                   }
-               })
-                    @Html.ValidationMessageFor(model => model.Message, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="send email" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    }
-</div>
-<div id="google-maps">
-    <h4>google maps API goes here.</h4>
-</div>
+@section scripts {
+    <script>
+        function initMap() {
+            var loc = { lat: 39.254013, lng: -94.453051 };
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 17,
+                center: loc
+            });
+            var marker = new google.maps.Marker({
+                position: loc,
+                map: map
+            });
+        }
+    </script>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKMmpcZr9Os1_rUxrql_c3ZruysAwbxXs&callback=initMap">
+    </script>
+}
