--- a/rcliberty.Web/Views/Shared/_Layout.cshtml
+++ b/rcliberty.Web/Views/Shared/_Layout.cshtml
@@ -3,9 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>Restoration Church | Churches in Liberty, MO</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+    <!-- custom styles -->
+    <link href="~/Content/custom.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -17,13 +20,42 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <img src="~/Content/img/restoration-church_logo.png" alt="Restoration Church Logo"
+                     href="@Url.Action("Index", "Home")" />
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @* TODO create white overlay (page load) - nav img *@
+                    <li>
+                        <a href="@Url.Action("Discover", "Home")">
+                            <img src="~/Content/img/discover_btn-img.png" alt="Discover" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("Life", "Home")">
+                            <img src="~/Content/img/life_btn-img.png" alt="Life" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("Grow", "Home")">
+                            <img src="~/Content/img/grow_btn-img.png" alt="Grow" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("Connect", "Home")">
+                            <img src="~/Content/img/connect_btn-img.png" alt="Connect" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("Attend", "Home")">
+                            <img src="~/Content/img/attend_btn-img.png" alt="Attend" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("Give", "Home")">
+                            <img src="~/Content/img/give_btn-img.png" alt="Give" />
+                        </a>
+                    </li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
