--- a/rcliberty.Web/Views/Home/Index.cshtml
+++ b/rcliberty.Web/Views/Home/Index.cshtml
@@ -2,30 +2,43 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div id="rc-main-slider" class="carousel slide" data-ride="carousel">
+    <!-- indicator icons -->
+    <ol class="carousel-indicators">
+        <li data-target="#rc-main-slider" data-slide-to="0" class="active"></li>
+        <li data-target="#rc-main-slider" data-slide-to="1"></li>
+    </ol>
+
+    <!-- slides -->
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="~/Content/img/the-experience-banner.jpg" alt="The Experience" style="width:100%;">
+        </div>
+
+        <div class="item">
+            <img src="~/Content/img/weird-stuff-banner.jpg" alt="Current Series" style="width:100%;">
+        </div>
+    </div>
+
+    <!-- left & right controls -->
+    <a class="left carousel-control" href="#rc-main-slider" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#rc-main-slider" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<div class="spacer"></div>
+
+<div id="rc-main-content">
+    <div class="pull-left">
+        <img src="~/Content/img/core_tile.png" />
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="pull-right">
+        <img src="~/Content/img/life-groups_tile.png" />
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    <div class="clearfix"></div>
 </div>
