--- a/rcliberty.Web/Views/Shared/_Layout.cshtml
+++ b/rcliberty.Web/Views/Shared/_Layout.cshtml
@@ -69,6 +69,11 @@
                                  onmouseout="this.src = '/Content/img/buttons/btn-give-white.png';" />
                         </a>
                     </li>
+                    <li>
+                        <a href="@Url.Action("Sermons", "Home")">
+                            Sermons
+                        </a>
+                    </li>
                 </ul>
                 @*@Html.Partial("_LoginPartial")*@
             </div>
