--- a/rcliberty.Web/Content/custom.css
+++ b/rcliberty.Web/Content/custom.css
@@ -1,14 +1,73 @@
-﻿/* BODY */
-/*body
+﻿/* DUDERCODE TAG */
+#dudercode
 {
-    background-image: url(/Content/img/backgrounds/bg-main.jpg);
-}*/
+    text-align: center;
+    font-weight: 600;
+    letter-spacing: 10px;
+}
+
+/* TAGS (images) */
+.img-tag-sm
+{
+    width: 2em;
+    height: 2em;
+}
+
+.img-tag-md
+{
+    width: 5em;
+    height: 5em;
+}
+
+/* GENERAL */
+.emphasis
+{
+    font-weight: 800;
+    color: #16a4a8;
+}
+
+.link a
+{
+    text-decoration: none;
+    color: #141213;
+}
+
+.link:hover a
+{
+    color: #16a4a8;
+}
+
+img
+{
+    width: 100%; /* all img responsive */
+}
+
 body
 {
     padding: 0; /* override site.css */
     width: 100%;
     background-color: #141213;
 }
+
+/* RESPONSIVE CONTAINERS */
+.container-half-screen
+{
+    margin: 0.5%;
+    position: relative;
+    display: inline-block;
+    float: left;
+    width: 49%;
+}
+
+/*@media screen and (max-width: 730px)
+{
+    .container-half-screen
+    {
+        width: 100%;
+        display: normal;
+        float: none;
+    }
+}*/
 
 /* SPACERS */
 .spacer
@@ -34,10 +93,28 @@ body
 
 /* NAVBAR */
 /* @media max-width: 1200px*/
-.nav.navbar-nav > li > a > img
+/*.nav.navbar-nav > li > a > img
 {
     margin-bottom: -60px;
     margin-left: -20px;
+}*/
+
+/*.nav .navbar-nav li
+{
+    font-size: 20px;
+}*/
+.nav.navbar-nav li a
+{
+    color: #fff;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: .25em;
+    vertical-align: middle;
+}
+
+.nav.navbar-nav li:hover a
+{
+    color: #16a4a8;
 }
 
 .navbar,
@@ -46,10 +123,24 @@ body
     border: none; /* override bootstrap.css */
 }
 
+#rc-logo
+{
+    /*border: 2px dashed yellow;*/
+    float: left;
+    display: inline;
+}
+
+    #rc-logo a img
+    {
+        width: 100%;
+        padding-right: 4em;
+    }
+
 /* FOOTER */
 footer
 {
     color: #fff;
+    width: 100%;
 }
 
 #address
@@ -59,29 +150,27 @@ footer
     text-align: center;
 }
 
-#footer-services
+#sunday-tag
 {
+    max-height: 5em;
+    max-width: 5em;
+    margin: 0 2em 0 50%;
     float: left;
-    width: 15%;
-    margin: 0 20%;
 }
 
-    #footer-services > h4
+/*@media screen and (max-width: 730px)
+{
+    #sunday-tag
     {
-        margin: 15px 0;
+        margin-left: 10%;
     }
 
-#map
-{
-    margin: 0 60%;
-}
-
-/* GENERAL */
-.emphasis
-{
-    font-weight: 800;
-    color: #16a4a8;
-}
+    #map
+    {
+        width: 90%;
+        margin-left: 5%;
+    }
+}*/
 
 /* INDEX */
 #rc-main-slider
@@ -97,6 +186,14 @@ footer
     width: 100%;
 }
 
+#rc-main-content
+{
+    margin-right: 5em;
+    text-align: center;
+}
+
+
+
 /* DISCOVER */
 #rc-discover
 {
@@ -105,12 +202,35 @@ footer
     padding: 2em;
 }
 
-    #rc-discover > h1
+    #rc-discover h1
     {
         letter-spacing: .1em;
         text-align: center;
         margin-bottom: 1em;
     }
+
+    #rc-discover h2
+    {
+        text-align: initial;
+    }
+
+    #rc-discover li
+    {
+        letter-spacing: .1em;
+        font-style: italic;
+        color: #141213;
+        font-size: 14px;
+    }
+
+
+
+@media screen and (max-width: 730px)
+{
+    #rc-culture-main-text
+    {
+        line-height: 1.5em;
+    }
+}
 
 #rc-discover-leaders
 {
@@ -119,15 +239,35 @@ footer
 
 .leaders-img
 {
-    float: left;
     width: 45%;
+    display: inline-block;
+    position: relative;
     text-align: center;
 }
 
 .leaders-content
 {
-    margin-left: 50%;
+    position: relative;
+    display: inline-block;
+    width: 45%;
+    margin-left: 5em;
 }
+
+/*@media screen and (max-width: 730px)
+{
+    .leaders-img
+    {
+        width: 100%;
+        display: normal;
+        float: none;
+    }
+
+    .leaders-content
+    {
+        width: 100%;
+        margin: 0;
+    }
+}*/
 
 .leaders-name
 {
@@ -142,29 +282,23 @@ footer
     letter-spacing: .05em;
 }
 
-#rc-discover-accordion
+#rc-discover-accordion > h2
 {
-    width: 75%;
-    margin: 0 8em;
+    background-color: #141213;
+    padding: .5em .5em;
+    color: #fff;
+    border: 3px solid #16a4a8;
 }
 
-    #rc-discover-accordion > h2
+    #rc-discover-accordion > h2:hover
     {
-        background-color: #141213;
-        padding: .5em .5em;
-        color: #fff;
-        border: 3px solid #16a4a8;
+        cursor: pointer;
     }
 
-        #rc-discover-accordion > h2:hover
-        {
-            cursor: pointer;
-        }
-
-    #rc-discover-accordion > div
-    {
-        padding: .5em 2em;
-    }
+#rc-discover-accordion > div
+{
+    padding: .5em 2em;
+}
 
 /* GROW */
 #rc-grow
@@ -197,15 +331,25 @@ footer
     text-transform: uppercase;
 }
 
-#rc-sermons
+#rc-sermons, #rc-sermons label
+/*, #rc-sermons-table_info*/
 {
     color: #fff;
 }
 
-    #rc-sermons > div > h4
+#rc-sermons-table
+{
+    border-bottom: 1.5em solid #16a4a8;
+}
+
+    #rc-sermons-table thead tr
     {
-        text-align: center;
-        letter-spacing: .15em;
+        background-color: #16a4a8;
+    }
+
+    #rc-sermons-table tbody tr
+    {
+        background-color: #141213;
     }
 
 .sermon
@@ -213,4 +357,84 @@ footer
     float: left;
     width: 37%;
     margin: 5em;
+}
+
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active,
+.dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active
+{
+    color: #fff;
+    background-color: #141213;
+}
+
+/* CONNECT */
+#rc-connect
+{
+    background-color: #fff;
+    text-align: justify;
+    padding: 2em;
+}
+
+    #rc-connect div.container-half-screen
+    {
+        padding: 1em;
+    }
+
+#rc-connect-left
+{
+    border: 2px solid #16a4a8;
+    min-height: 5em;
+    padding: 1em;
+}
+
+.field input,
+.field textarea
+{
+    min-width: 100%;
+}
+
+.rc-connect-name
+{
+    width: 47%;
+    position: relative;
+    float: left;
+    display: inline-block;
+}
+
+.text-field
+{
+    margin: .5em;
+}
+
+/*@media screen and (max-width: 1200px)
+{
+    .rc-connect-name
+    {
+        width: 100%;
+        position: initial;
+        float: none;
+        display: normal;
+    }
+}*/
+
+#rc-connect-btn
+{
+    color: #16a4a8;
+    font-weight: 600;
+    letter-spacing: .25em;
+    text-transform: uppercase;
+}
+
+    #rc-connect-btn:hover
+    {
+        background-color: #16a4a8;
+        color: #fff;
+        border: none;
+        font-weight: 600;
+        letter-spacing: .25em;
+        text-transform: uppercase;
+    }
+
+.form-control:focus
+{
+    border: 1px solid #16a4a8;
 }
