--- a/rcliberty.Web/Views/Home/Discover.cshtml
+++ b/rcliberty.Web/Views/Home/Discover.cshtml
@@ -17,7 +17,7 @@
     <div id="rc-discover-accordion">
         <h2>Our <span class="emphasis">Culture</span></h2>
         <div>
-            <h4>
+            <h4 id="rc-culture-main-text">
                 <span class="emphasis">Restoration Church</span> is a church for people that are sick of "playing church". We believe
                 that every number has a name, every name has a story, and every story matters to God.
             </h4>
@@ -44,25 +44,27 @@
         <div>
             <h4>We believe...</h4>
             <ol>
-                <li><a href="#1">The Scriptures Inspired</a> </li>
-                <li><a href="#2">The One True God</a> </li>
-                <li><a href="#3">The Deity of the Lord Jesus Christ</a> </li>
-                <li><a href="#4">The Fall of Man</a> </li>
-                <li><a href="#5">The Salvation of Man</a> </li>
-                <li><a href="#6">The Ordinances of the Church</a> </li>
-                <li><a href="#7">The Baptism in the Holy Spirit</a> </li>
-                <li><a href="#8">The Initial Physical Evidence of the Baptism in the Holy Spirit</a> </li>
-                <li><a href="#9">Sanctification</a> </li>
-                <li><a href="#10">The Church and Its Mission</a> </li>
-                <li><a href="#11">The Ministry</a> </li>
-                <li><a href="#12">Divine Healing</a> </li>
-                <li><a href="#13">The Blessed Hope</a> </li>
-                <li><a href="#14">The Millennial Reign of Christ</a> </li>
-                <li><a href="#15">The Final Judgment</a> </li>
-                <li><a href="#16">The New Heavens and the New Earth</a> </li>
+                <li><h5>The Scriptures Inspired</h5> </li>
+                <li><h5>The One True God</h5> </li>
+                <li><h5>The Deity of the Lord Jesus Christ</h5> </li>
+                <li><h5>The Fall of Man</h5> </li>
+                <li><h5>The Salvation of Man</h5> </li>
+                <li><h5>The Ordinances of the Church</h5> </li>
+                <li><h5>The Baptism in the Holy Spirit</h5> </li>
+                <li><h5>The Initial Physical Evidence of the Baptism in the Holy Spirit</h5> </li>
+                <li><h5>Sanctification</h5> </li>
+                <li><h5>The Church and Its Mission</h5> </li>
+                <li><h5>The Ministry</h5> </li>
+                <li><h5>Divine Healing</h5> </li>
+                <li><h5>The Blessed Hope</h5> </li>
+                <li><h5>The Millennial Reign of Christ</h5> </li>
+                <li><h5>The Final Judgment</h5> </li>
+                <li><h5>The New Heavens and the New Earth</h5> </li>
             </ol>
-
-            <h4><a href="https://ag.org/Beliefs/Statement-of-Fundamental-Truths" target="_blank">16 Fundamental Truths</a></h4>
+            <a href="https://ag.org/Beliefs/Statement-of-Fundamental-Truths" target="_blank">
+                <img class="img-tag-md pull-right" src="~/Content/img/tags/ag-tag.png">
+            </a>
+            <div class="clearfix"></div>
         </div>
 
         <h2>Our <span class="emphasis">Leaders</span></h2>
@@ -71,17 +73,15 @@
                 <img src="~/Content/img/people/jp_heather.jpg" alt="Lead Pastor" />
             </div>
             <div class="leaders-content">
-                <div>
-                    <h4 class="leaders-name">JP Stafford</h4>
-                    <h5 class="leaders-title">Lead Pastor</h5>
-                    <p>
-                        JP Stafford is the founding &amp; lead pastor of Restoration Church in Liberty, MO. While a talented communicator
-                        and teacher, he is passionate about speaking the truth as plainly as possible. God has given him a vision and desire
-                        to help people meet Jesus, and each week he shares God's word and how we can apply it to our daily lives.
-                    </p>
-                    <p>JP lives in Liberty, MO with his wife and 2 children.</p>
-                    <p>Twitter: @Html.Raw("@")JohnPStafford</p>
-                </div>
+                <h4 class="leaders-name">JP Stafford</h4>
+                <h5 class="leaders-title">Lead Pastor</h5>
+                <p>
+                    JP Stafford is the founding &amp; lead pastor of Restoration Church in Liberty, MO. While a talented communicator
+                    and teacher, he is passionate about speaking the truth as plainly as possible. God has given him a vision and desire
+                    to help people meet Jesus, and each week he shares God's word and how we can apply it to our daily lives.
+                </p>
+                <p>JP lives in Liberty, MO with his wife and 2 children.</p>
+                <h4 class="link"><a href="https://twitter.com/johnpstafford" target="_blank"><img class="img-tag-sm" src="~/Content/img/tags/twitter-tag.png" /> @Html.Raw("@")JohnPStafford</a></h4>
             </div>
         </div>
     </div>
@@ -91,7 +91,7 @@
     <script>
         $(function () {
             $('#rc-discover-accordion').accordion({
-                active: false,
+                active: 0,
                 collapsible: true,
                 header: "h2",
                 heightStyle: "content"
