--- a/rcliberty.Web/Views/Shared/_Layout.cshtml
+++ b/rcliberty.Web/Views/Shared/_Layout.cshtml
@@ -7,13 +7,27 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    <!-- custom styles -->
-    <link href="~/Content/custom.css" rel="stylesheet" />
+    <!-- datatables.net styles -->
+    <link href="~/Content/datatables.min.css" rel="stylesheet" type="text/css" />
+    @*<link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />*@
 
+    <!-- custom styles -->
+    <link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
+
+    <!-- mobile styles -->
+    @* TODO: determine if best practice or leave in custom.css *@
+    <link media="only screen and (max-width: 730px)" href="~/Content/mobile.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="spacer"></div>
+
+
     <div class="navbar navbar-inverse navbar-top">
+        <div id="rc-logo">
+            <a href="@Url.Action("Index", "Home")">
+                <img src="~/Content/img/restoration-church_logo.png" alt="Restoration Church Logo" />
+            </a>
+        </div>
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -21,59 +35,40 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="@Url.Action("Index", "Home")">
-                    <img src="~/Content/img/restoration-church_logo.png" alt="Restoration Church Logo" />
-                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>
                         <a href="@Url.Action("Discover", "Home")">
-                            <img src="~/Content/img/buttons/btn-discover-white.png" alt="Discover"
-                                 onmouseover="this.src = '/Content/img/buttons/btn-discover-gray.png';"
-                                 onmouseout="this.src = '/Content/img/buttons/btn-discover-white.png';" />
+                            Discover
                         </a>
                     </li>
                     <li>
                         <a href="@Url.Action("Connect", "Home")">
-                            <img src="~/Content/img/buttons/btn-connect-white.png" alt="Connect"
-                                 onmouseover="this.src = '/Content/img/buttons/btn-connect-gray.png';"
-                                 onmouseout="this.src = '/Content/img/buttons/btn-connect-white.png';" />
+                            Connect
                         </a>
                     </li>
-                    @*<li>
-                        <a href="@Url.Action("Life", "Home")">
-                            <img src="~/Content/img/buttons/btn-life-white.png" alt="Life"
-                                 onmouseover="this.src = '/Content/img/buttons/btn-life-gray.png';"
-                                 onmouseout="this.src = '/Content/img/buttons/btn-life-white.png';" />
-                        </a>
-                    </li>*@
                     <li>
                         <a href="@Url.Action("Grow", "Home")">
-                            <img src="~/Content/img/buttons/btn-grow-white.png" alt="Grow"
-                                 onmouseover="this.src = '/Content/img/buttons/btn-grow-gray.png';"
-                                 onmouseout="this.src = '/Content/img/buttons/btn-grow-white.png';" />
+                            Grow
                         </a>
                     </li>
                     <li>
                         <a href="@Url.Action("Attend", "Home")">
-                            <img src="~/Content/img/buttons/btn-attend-white.png" alt="Attend"
-                                 onmouseover="this.src = '/Content/img/buttons/btn-attend-gray.png';"
-                                 onmouseout="this.src = '/Content/img/buttons/btn-attend-white.png';" />
+                            Attend
                         </a>
                     </li>
                     <li>
                         <a href="@Url.Action("Give", "Home")">
-                            <img src="~/Content/img/buttons/btn-give-white.png" alt="Give"
-                                 onmouseover="this.src = '/Content/img/buttons/btn-give-gray.png';"
-                                 onmouseout="this.src = '/Content/img/buttons/btn-give-white.png';" />
+                            Give
                         </a>
                     </li>
                     <li>
                         <a href="@Url.Action("Sermons", "Home")">
-                            Sermons
+                            Past Messages
                         </a>
                     </li>
+
                 </ul>
                 @*@Html.Partial("_LoginPartial")*@
             </div>
@@ -86,19 +81,27 @@
     <div class="spacer"></div>
     <footer>
         <h3 id="address">Restoration Church | 1908 Plumbers Way | Liberty, MO</h3>
-        <div id="footer-services">
-            <img class="pull-left" src="~/Content/img/tags/sunday-tag.jpg" />
-            <h4> The Experience 10:30 am <br /> The Capitol 6:00 pm</h4>
+        <div class="container-half-screen">
+            <img id="sunday-tag" src="~/Content/img/tags/sunday-tag.jpg" />
+            <h4 id="service-times">
+                The <span class="emphasis">Experience</span> 10:30 am
+                <br />
+                The <span class="emphasis">Capitol</span> 6:00 pm
+            </h4>
         </div>
-        <div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3089.4748623185687!2d-94.45306099999999!3d39.254791000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c05596699748cd%3A0xd1ba2dfc1c16a90!2s1908+Plumbers+Way+%23400%2C+Liberty%2C+MO+64068!5e0!3m2!1sen!2sus!4v1441998880692" width="404" height="200" frameborder="0" style="border:0" allowfullscreen></iframe></div>
-
-
+        <div class="container-half-screen">
+            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3089.4748623185687!2d-94.45306099999999!3d39.254791000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87c05596699748cd%3A0xd1ba2dfc1c16a90!2s1908+Plumbers+Way+%23400%2C+Liberty%2C+MO+64068!5e0!3m2!1sen!2sus!4v1441998880692" width="404" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
         <div class="clearfix"></div>
-        <p>&copy; @DateTime.Now.Year - dudercode</p>
+
+        <p id="dudercode">&copy; <span class="emphasis">@DateTime.Now.Year</span> - duder<span class="emphasis">code</span></p>
     </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    <!-- datatables.net scripts -->
+    <script src="~/Scripts/datatables.min.js" type="text/javascript"></script>
+    @*<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.16/datatables.min.js"></script>*@
     @RenderSection("scripts", required: false)
 </body>
 </html>
