--- a/rcliberty.Web/Views/Home/Connect.cshtml
+++ b/rcliberty.Web/Views/Home/Connect.cshtml
@@ -32,11 +32,13 @@
 
     <div class="container-half-screen">
         <h2><span class="emphasis">Connect</span> with us</h2>
-        @using (Html.BeginForm("ContactForm", "Home", FormMethod.Post))
+        @using (Html.BeginForm("Connect", "Home", FormMethod.Post))
             {
             @Html.AntiForgeryToken()
 
             <div class="form-horizontal">
+                @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+
                 <div class="field">
                     <div class="rc-connect-name text-field">
                         @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control", @placeholder = "First Name" } })
@@ -86,8 +88,6 @@
 
                 <div class="clearfix"></div>
             </div>
-            @Html.ValidationSummary(false, "", new { @class = "text-danger" })
-
         }
     </div>
 
