--- a/rcliberty.Web/Views/Home/Index.cshtml
+++ b/rcliberty.Web/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     <ol class="carousel-indicators">
         <li data-target="#rc-main-slider" data-slide-to="0" class="active"></li>
         <li data-target="#rc-main-slider" data-slide-to="1"></li>
+        <li data-target="#rc-main-slider" data-slide-to="2"></li>
     </ol>
 
     <!-- slides -->
@@ -17,6 +18,9 @@
 
         <div class="item">
             <img src="~/Content/img/weird-stuff-banner.jpg" alt="Current Series" style="width:100%;">
+        </div>
+        <div class="item">
+            <img src="~/Content/img/theCapitol-promo-resize2.png" alt="The Capitol" style="width:100%;" />
         </div>
     </div>
 
@@ -35,7 +39,9 @@
 
 <div id="rc-main-content">
     <div id="core-sub" class="container-half-screen">
-        <img src="~/Content/img/core_tile.png" />
+        <a href="@Url.Action("Discover")">
+            <img src="~/Content/img/core_tile.png" />
+        </a>
     </div>
     <div id="life-groups-sub" class="container-half-screen">
         <a href="@Url.Action("Grow")">
@@ -52,5 +58,12 @@
             var path = window.location.pathname;
             localStorage.setItem("prevPath", path);
         });
+
+        $("#core-sub").click(function getPathName() {
+            var path = window.location.pathname;
+            localStorage.setItem("prevPath", path);
+        });
+
+
     </script>
 }
